CocoroCoreのビルドスクリプトを追加し、メインプログラムの構成を整理。設定ローダーとダミーデータベースクラスを実装し、不要なファイルを削除。

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: CocoroCore",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/cocoro_core.py",
+            "program": "${workspaceFolder}/src/main.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "python": "${workspaceFolder}/venv/Scripts/python.exe",
