--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "仮想環境の有効化とCocoroCore実行",
             "type": "shell",
-            "command": "${workspaceFolder}/venv/Scripts/Activate.ps1 ; python ${workspaceFolder}/cocoro_core.py",
+            "command": "${workspaceFolder}/.venv/Scripts/Activate.ps1 ; python ${workspaceFolder}/cocoro_core.py",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
