--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     ],
     "[python]": {
         "editor.defaultFormatter": "charliermarsh.ruff",
-    }
+    },
+    "commentTranslate.hover.enabled": false
 }
