.gitignoreに.claude/、.github/、CLAUDE.mdを追加

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ recorded_voices/
 context.db
 performance.db
 *.code-workspace
+.claude/
+.github/
+CLAUDE.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
